--- a/informe/caratula.tex
+++ b/informe/caratula.tex
@@ -3,6 +3,6 @@
 \materia{Base de Datos}
 
 \integrante{Pedro Rodriguez}{197/12}{pedro3110.jim@gmail.com}
-\integrante{Lucas Tavolaro Ortiz}{}{tavo92@gmail.com}
+\integrante{Lucas Tavolaro Ortiz}{322/12}{tavo92@gmail.com}
 % \integrante{Pepe Sánchez}{444/12}{pepe@gmail.com}
 % \integrante{Roberto Carlos}{111/10}{roberto@gmail.com}
