--- a/informe/main.tex
+++ b/informe/main.tex
@@ -40,6 +40,10 @@
 	\item Si una persona es culpable de un Caso, o un Oficial resolvió un Caso, entonces el estado del caso es de tipo Resuelto.
 \end{itemize}
 
+\section{DER}
+A continuación, mostramos el diagrama entidad relación utilizado como base para el desarrollo del TP
+\includegraphics[scale=0.4]{der.png}
+
 \section{MR}
 A continuación, detallamos el modelo relacional correspondiente a nuestra BDD.
 
