Listo tp1, esqueleto de informe de tp2

--- a/tp1/informe/main.tex
+++ b/tp1/informe/main.tex
@@ -136,10 +136,8 @@ psql < tablas.sql
 
 Las búsquedas solicitas en el enunciado se encuentran en el archivo busquedas.sql, en donde aclaramos en los comentarios de que busqueda se trata cada bloque de c\'odigo.
 
-%
-%
-% \section{Conclusiones}
-% \input{conclusiones.tex}
-%
+\section{Conclusiones}
+
+Lo que mas nos costo del TP fue el DER, del cual tuvimos que ir modificando varias cosas seg\'un fuimos charlando con nuestra tutora. Pero una vez que tuvimos el DER cerrado, eso ordeno bien el resto del trabajo que nos fue mucho mas f\'acil y fluido de hacer ya que teniamos bien estructuradas las tablas para poder trabajar.
 
 \end{document}
