Arreglada la estructura

--- a/tp2/informe/main.tex
+++ b/tp2/informe/main.tex
@@ -60,6 +60,19 @@
 
 \section{Documentos para Mongo}
 
+A continuaci\'on vamos a definir el documento para Mongo en cada una de las queries dadas y argumentar la elecci\'on de dicho documento contando, a alto nivel, como ser\'ian los inserts, mantenimiento y busqueda con map-reduce.
+
+\subsection{Querie 1 + 2}
+
+\subsection{Querie 3}
+
+\subsection{Querie 4}
+
+\subsection{Querie 5+6}
+
+\subsection{Querie 7}
+
+
 \begin{lstlisting}[language=json]
 
 1) + Para mayor nro. de crimenes cometidos por alguna persona 
