--- a/tp2/informe/main.tex
+++ b/tp2/informe/main.tex
@@ -233,6 +233,8 @@ Para poder garantizar la propiedad de que solo contenga crimenes de los \'ultimo
 
 En el map tendremos el tipo de crimen como la clave, y calcularemos la la suma de todos los crímenes en las fechas que hay guardadas (Recordemos que todas están incluidas en los últimos 45 días). El reduce es simplemente tomar estos valores y mostrarlos. \
 
+\section{Implementaci\'on de Map-Reduce}
+
 \section{Conclusiones}
 
 \end{document}
