Informe entregado del TP2

--- a/tp2/informe/main.tex
+++ b/tp2/informe/main.tex
@@ -331,8 +331,9 @@ db.doc5.mapReduce(
 \end{lstlisting}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Implementaci\'on de Map-Reduce}
 
 \section{Conclusiones}
+
+En el trabajo realizamos distintos tipos de documentos en donde pudimos ver que cada uno tiene ciertas ventajas y desventajas. Nos pareci\'o enriquecedor podes llevar adelante las ideas que tuvimos para poder realizar un desarrollo de como funciona cada una. A modo de cierre, podemos concluir que el dise\~no del documento es algo que necesita pensarse bien ya que define mucho de todo lo dem\'as. En particular es importante poder saber, en casos reales, como se va a comportar el documento, es decir, cada cuanto tenemos inserts, que recursos tenemos, si podemos realizar operaciones de mantenimiento frecuentemente, que queries y con que frecuencia recibiremos, etc. Con esta informaci\'on clara, se puede tomar una buena decisi\'on en cuanto al dise\~no para poder elegir la que tenga las ventajas que necesita nuestro problema.
 
 \end{document}
